TP_Kube_01/step 2/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: registry.gitlab.com/takima-school/images/simple-website:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: takima-school-registry
