TP_Kube_01/step 2/unicorn-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: unicorn-front-ingress
 annotations:
  cert-manager.io/cluster-issuer: letsencrypt-staging
  kubernetes.io/tls-acme: 'true'
spec:
 ingressClassName: nginx
 rules:
 - host: unicorn.theo-gimond.epf.takima.school
   http:
     paths:
     - backend:
         service:
           name: unicorn-front-service
           port:
             number: 80
       path: /
       pathType: Prefix
 tls:
 - hosts:
   - unicorn.theo-gimond.epf.takima.school
   secretName: app-wildcard
